2007-05-20 Andrea Zagli <azagli@inwind.it>

	* src/rptreport.h:
	* src/rptreport.c: added functions rpt_report_database_get_provider(),
	rpt_report_database_get_connection_string(),
	rpt_report_database_get_sql()


2007-05-12 Andrea Zagli <azagli@inwind.it>

	* libreptool.pc.in: libgda missing
	* src/rptreport.h:
	* src/rptreport.c: added rpt_report_get_page_size(),
	rpt_report_get_page_margins(), rpt_report_get_section_height(),
	rpt_report_get_report_header_new_page_after(),
	rpt_report_get_report_footer_new_page_before(),
	rpt_report_get_page_header_first_page(),
	rpt_report_get_page_header_last_page(),
	rpt_report_get_page_footer_first_page(),
	rpt_report_get_page_footer_last_page(), rpt_report_section_get_objects(),
	rpt_report_body_get_new_page_after(), rpt_report_body_set_new_page_after(),
	rpt_report_section_remove()

2007-05-10 Andrea Zagli <azagli@inwind.it>

	* src/rptprint.c: some code adjustments

2007-05-07 Andrea Zagli <azagli@inwind.it>

	* src/rptprint.c: integration with GtkPrint

2007-05-06 Andrea Zagli <azagli@inwind.it>

	* src/rptobjecttext.c:
	* src/rptobjectline.c:
	* src/rptobjectimage.c:
	* src/rptobjectrect.c: added attribute "rotation"
	* configure.ac: some adjustments
	* src/rptprint.h:
	* src/rptprint.c: changed prototype of rpt_print_new_from_xml() and
	rpt_print_new_from_file(); added rpt_print_set_output_type(),
	rpt_print_set_output_filename() and respective properties

2007-05-05 Andrea Zagli <azagli@inwind.it>

	* src/rptprint.c: some bugfixes for png and svg output
	* src/rptcommon.h:
	* src/rptcommon.c: added struct RptRotation;
	managed RptRotation with rpt_common_get_rotation() and
	rpt_common_set_rotation()
	* src/rptreport.h:
	* src/rptreport.c: some bugfixes

2007-05-01 Andrea Zagli <azagli@inwind.it>

	* src/lexycal.fl:
	* src/parser.y:
	* src/lexycal.yy.h:
	* src/lexycal.yy.c:
	* src/parser.tab.h:
	* src/parser.tab.c:
	* src/rptreport.c: added parser for text's attribute "source"